// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:number 1`] = `
<div>
  <div
    class="a-Panel a-Panel--default a-Panel--form"
    style="position: relative;"
  >
    <div
      class="a-Panel-heading"
    >
      <h3
        class="a-Panel-title"
      >
        <span
          class="a-TplField"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="a-Panel-body"
    >
      <form
        class="a-Form a-Form--normal"
        novalidate=""
      >
        <div
          class="a-Form-item a-Form-item--normal"
          data-role="form-item"
        >
          <label
            class="a-Form-label"
          >
            <span>
              range
            </span>
          </label>
          <div
            class="a-RangeControl a-RangeControl--withInput a-RangeControl--clearable a-Form-control"
          >
            <div
              aria-disabled="false"
              class="a-InputRange"
            >
              <span
                class="a-InputRange-label a-InputRange-label--min"
              >
                <span
                  class="a-InputRange-labelContainer"
                >
                  0
                </span>
              </span>
              <div
                class="a-InputRange-track a-InputRange-track--background"
              >
                <div
                  class="a-InputRange-track"
                  style="left: 0%; width: 40%;"
                />
                <span
                  class="a-InputRange-sliderContainer"
                  style="position: absolute; left: 40%;"
                >
                  <span
                    class="a-InputRange-label a-InputRange-label--value"
                    style="left: calc(50% - 0px);"
                  >
                    <span
                      class="a-InputRange-labelContainer"
                    >
                      8
                    </span>
                  </span>
                  <div
                    aria-valuemax="20"
                    aria-valuemin="0"
                    aria-valuenow="8"
                    class="a-InputRange-slider"
                    draggable="false"
                    role="slider"
                    tabindex="0"
                  />
                </span>
              </div>
              <span
                class="a-InputRange-label a-InputRange-label--max"
              >
                <span
                  class="a-InputRange-labelContainer"
                >
                  20
                </span>
              </span>
            </div>
            <span
              class="a-InputRange-label a-InputRange-label--mid"
              style="left: calc(50% - 60px);"
            >
              <span
                class="a-InputRange-labelContainer"
              >
                10
              </span>
            </span>
            <div
              class="a-InputRange-input"
            >
              <input
                class="is-active"
                name="a"
                type="text"
                value="8"
              />
            </div>
            <a
              class="a-InputRange-clear is-active"
            >
              <icon-mock
                classname="icon icon-close"
                icon="close"
              />
            </a>
          </div>
        </div>
        <input
          style="display: none;"
          type="submit"
        />
      </form>
    </div>
    <div
      class="resize-sensor"
      style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
    >
      
  
      <div
        class="resize-sensor-expand"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-shrink"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-appear"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
      />
    </div>
  </div>
</div>
`;

exports[`Renderer:range:multiple 1`] = `
<div>
  <div
    class="a-Panel a-Panel--default a-Panel--form"
    style="position: relative;"
  >
    <div
      class="a-Panel-heading"
    >
      <h3
        class="a-Panel-title"
      >
        <span
          class="a-TplField"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="a-Panel-body"
    >
      <form
        class="a-Form a-Form--normal"
        novalidate=""
      >
        <div
          class="a-Form-item a-Form-item--normal"
          data-role="form-item"
        >
          <label
            class="a-Form-label"
          >
            <span>
              range
            </span>
          </label>
          <div
            class="a-RangeControl a-RangeControl--withInput a-RangeControl--clearable is-multiple a-Form-control"
          >
            <div
              aria-disabled="false"
              class="a-InputRange"
            >
              <span
                class="a-InputRange-label a-InputRange-label--min"
              >
                <span
                  class="a-InputRange-labelContainer"
                >
                  0
                </span>
              </span>
              <div
                class="a-InputRange-track a-InputRange-track--background"
              >
                <div
                  class="a-InputRange-track is-active"
                  style="left: 0%; width: 100%;"
                />
                <span
                  class="a-InputRange-sliderContainer"
                  style="position: absolute; left: 0%;"
                >
                  <span
                    class="a-InputRange-label a-InputRange-label--value"
                  >
                    <span
                      class="a-InputRange-labelContainer"
                    >
                      0
                    </span>
                  </span>
                  <div
                    aria-valuemax="20"
                    aria-valuemin="0"
                    aria-valuenow="0"
                    class="a-InputRange-slider"
                    draggable="false"
                    role="slider"
                    tabindex="0"
                  />
                </span>
                <span
                  class="a-InputRange-sliderContainer"
                  style="position: absolute; left: 100%;"
                >
                  <span
                    class="a-InputRange-label a-InputRange-label--value"
                  >
                    <span
                      class="a-InputRange-labelContainer"
                    >
                      20
                    </span>
                  </span>
                  <div
                    aria-valuemax="20"
                    aria-valuemin="0"
                    aria-valuenow="20"
                    class="a-InputRange-slider"
                    draggable="false"
                    role="slider"
                    tabindex="0"
                  />
                </span>
              </div>
              <span
                class="a-InputRange-label a-InputRange-label--max"
              >
                <span
                  class="a-InputRange-labelContainer"
                >
                  20
                </span>
              </span>
            </div>
            <span
              class="a-InputRange-label a-InputRange-label--mid"
              style="left: calc(50% - 60px);"
            >
              <span
                class="a-InputRange-labelContainer"
              >
                10
              </span>
            </span>
            <div
              class="a-InputRange-input is-multiple"
            >
              <input
                class=""
                name="a"
                type="text"
                value="0"
              />
              <span
                class="a-InputRange-input-separator"
              >
                 - 
              </span>
              <input
                class=""
                name="a"
                type="text"
                value="20"
              />
            </div>
            <a
              class="a-InputRange-clear is-active"
            >
              <icon-mock
                classname="icon icon-close"
                icon="close"
              />
            </a>
          </div>
        </div>
        <input
          style="display: none;"
          type="submit"
        />
      </form>
    </div>
    <div
      class="resize-sensor"
      style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
    >
      
  
      <div
        class="resize-sensor-expand"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-shrink"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-appear"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
      />
    </div>
  </div>
</div>
`;
